# src/repositories/dto/user-dto.ts
@@ -1,0 +1,6 @@
+export interface IUpdatedUserDTO {
+    id?: string,
+    email: string
+    password: string,
+    updated_at: Date
+}
